[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/gui/heart.png" type="Texture" id=1]
[ext_resource path="res://Scenes/m6x11.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/gui/DeathScreen.gd" type="Script" id=3]
[ext_resource path="res://Scenes/gui/dark_pixel.png" type="Texture" id=4]
[ext_resource path="res://Scenes/gui/PauseScreen.gd" type="Script" id=5]
[ext_resource path="res://Scenes/gui/HUD.gd" type="Script" id=6]
[ext_resource path="res://Scenes/gui/HintContainer.gd" type="Script" id=7]

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
layer = 101
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 81.96
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts" type="HBoxContainer" parent="MarginContainer"]
margin_right = 71.0
margin_bottom = 30.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Hearts"]
margin_right = 15.0
margin_bottom = 30.0
texture = ExtResource( 1 )

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/Hearts"]
margin_left = 17.0
margin_right = 32.0
margin_bottom = 30.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Hearts"]
margin_left = 34.0
margin_right = 49.0
margin_bottom = 30.0
texture = ExtResource( 1 )

[node name="DeathScreen" type="CenterContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 256.0
margin_bottom = 148.0
rect_scale = Vector2( 4, 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen"]
margin_left = 34.0
margin_top = 55.0
margin_right = 221.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="DeathScreen/VBoxContainer"]
margin_right = 187.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "You died"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DeathScreen/VBoxContainer"]
margin_top = 18.0
margin_right = 187.0
margin_bottom = 38.0

[node name="Restart" type="Button" parent="DeathScreen/VBoxContainer/HBoxContainer"]
margin_right = 61.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Restart"

[node name="Quit" type="Button" parent="DeathScreen/VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 187.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Quit to main menu"

[node name="DarkeningSprite" type="Sprite" parent="DeathScreen"]
z_index = -1
texture = ExtResource( 4 )
centered = false

[node name="Tween" type="Tween" parent="DeathScreen"]

[node name="PauseScreen" type="CenterContainer" parent="."]
visible = false
margin_right = 256.0
margin_bottom = 148.0
rect_scale = Vector2( 4, 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen"]
margin_left = 37.0
margin_top = 55.0
margin_right = 219.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="PauseScreen/VBoxContainer"]
margin_right = 182.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseScreen/VBoxContainer"]
margin_top = 18.0
margin_right = 182.0
margin_bottom = 38.0

[node name="Resume" type="Button" parent="PauseScreen/VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="Quit" type="Button" parent="PauseScreen/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 182.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Quit to main menu"

[node name="DarkeningSprite" type="Sprite" parent="PauseScreen"]
z_index = -1
texture = ExtResource( 4 )
centered = false

[node name="Hint" type="Label" parent="."]
margin_left = 5.74011
margin_right = 258.74
margin_bottom = 156.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DeathScreen/VBoxContainer/HBoxContainer/Restart" to="DeathScreen" method="_on_Restart_pressed"]
[connection signal="pressed" from="DeathScreen/VBoxContainer/HBoxContainer/Quit" to="DeathScreen" method="_on_Quit_pressed"]
[connection signal="pressed" from="PauseScreen/VBoxContainer/HBoxContainer/Resume" to="PauseScreen" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseScreen/VBoxContainer/HBoxContainer/Quit" to="PauseScreen" method="_on_Quit_pressed"]
